mild spacing issue on form feedback message

--- a/src/styles/Lottery.css
+++ b/src/styles/Lottery.css
@@ -75,6 +75,7 @@
 }
 
 .form-feedback {
+  margin-bottom: 0rem;
   height: 1.6rem;
   font-size: 1rem;
 }
@@ -222,6 +223,7 @@ a:hover {
   .instructions-list {
     font-size: 1.6rem;
     padding: 0.8rem 0.8rem 0.8rem 2rem;
+    margin-bottom: 2rem;
   }
 
   .instructions-list li {
